# asuransi.id

./: .gitignore  AGENTS.md  CONTEXT.md  DESIGN.md  DESIGN_AGENT_BRIEF.md  PRODUCT.md  README.md  pyproject.toml
data/normalized/: insurers.json  parse_failures.json  policies.json
docs/: PRD.md
scripts/: _common.py  normalize_policies.py  recon_aggregators.py  recon_brosur_pricing.py  recon_insurers.py  recon_ojk_kesehatan.py  recon_product_details.py  recon_product_landings.py  scrape_ojk.py
scripts/insurers/aia-financial/: scrape.py
scripts/insurers/allianz/: scrape.py
scripts/insurers/bca-life/: scrape.py
scripts/insurers/bni-life/: scrape.py
scripts/insurers/bpjs-kesehatan/: scrape.py
scripts/insurers/car/: scrape.py
scripts/insurers/generali/: scrape.py
scripts/insurers/hanwha-life/: scrape.py
scripts/insurers/manulife/: scrape.py
scripts/insurers/prudential/: scrape.py
scripts/insurers/sequis/: scrape.py
scripts/insurers/sun-life/: scrape.py
scripts/insurers/tokio-marine-life/: scrape.py
scripts/insurers/zurich-topas/: scrape.py
scripts/parser_probe/: probe_docling.py
web/: index.html  package.json  pnpm-lock.yaml
web/src/: App.tsx  index.css
web/src/components/: BrowseBenefits.tsx  BrowseInsurers.tsx  Chip.tsx  CompareTable.tsx  DisclaimerStrip.tsx  EmptyState.tsx  FailureBanner.tsx  FilterRail.tsx  HeroSearch.tsx  HomeFeatured.tsx  HomeHero.tsx  InsurerMark.tsx  IntentPillRow.tsx  Nav.tsx  SourceLink.tsx  Tag.tsx
web/src/data/: categoryLabels.ts  compare.ts  derive.ts  normalized  productDetail.ts
(+9 files in other folders)
