[project]
name = "asuransi-id"
version = "0.1.0"
description = "AI-powered Indonesian health insurance data aggregator"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "curl-cffi>=0.15.0",
    "docling>=2.93.0",
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.1",
    "uvicorn[standard]>=0.48.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
